[+] Gestionnaire de médias : affichage nombre maxi de fichiers par envoi
[+] #225: Ajout id à la balise <body> de la page auth.php
[+]	#230: Image d'accroche dans le premier article créer à l'installation
[+] #239 Test et affichage accès en écriture du dossier racine pour les thèmes
[+] #264 fonction debugJS (contribution bazooka07)
[+] #265 Affichage des archives sur une périodes glissantes de 12 mois (cotribution bazzoka07)
FIX Suppression fichier plugin update impossible (droit fichier)
FIX Chevauchement des menus de l'administration avec un facteur de zoom > 100%
FIX Administration : mauvais affichage des caractères spéciaux dans le nom de l'auteur d'un commentaire (contribution bazooka07)
FIX mediasManager.js : fonction callback inactive avec Firefox Quantum
FIX #220 Problème affichage css thème par défaut
FIX #237 urlRewrite et caractère &
FIX #249 ajout clés de traduction russe absentes
FIX #256 plxPlugin::setParam : mauvais test su le paramètre $type (contribution bazooka07)
FIX #260 Libellé de catégorie "Non classé" non affiché lors de la prévisualisation
FIX #262 Suppression tris inutiles

## PLUXML 5.6 (sortie : 05/04/2017) ##

[+] PluCSS 1.2
[+] Contrôle de la force des mots de passe saisis
[+] Protection attaque brute force sur l'écran de connexion à l'administration
[+] Administration > Paramètres > Thèmes : test existence fichier infos.xml dans le dossier thème pour le lister ou non
[+] Administration > Paramètres > Plugins : ajout filtre de recherche
[+] Administration > Paramètres > Options d'affichage : Nombre d'articles affichés par page dans les mots clés
[+] Administration : recherche possible à partir de l'identifiant d'un article
[+] Administration : suppression fichier install.php à partir du message d'information
[+] Gestionnaire de médias : affichage des miniatures jpeg
[+] Gestionnaire de médias : copie lien image dans le presse-papier
[+] Gestionnaire de médias : champ de recherche/filtre sur le nom des images