@@ -5,6 +5,7 @@
 </main>
 
 <?php eval($plxAdmin->plxPlugins->callHook('AdminFootEndBody')) ?>
+
 <script src="<?php echo PLX_CORE ?>lib/drag-and-drop.js"></script>
 <script>
 	setMsg();
