@@ -12,7 +12,8 @@
 [+]	#230: Image d'accroche dans le premier article créer à l'installation
 [+] #239 Test et affichage accès en écriture du dossier racine pour les thèmes
 [+] #264 fonction debugJS (contribution bazooka07)
-[+] #265 Affichage des archives sur une périodes glissantes de 12 mois (cotribution bazzoka07)
+[+] #265 Affichage des archives sur une périodes glissantes de 12 mois (contribution bazooka07)
+[+] #266 Tri des pages statiques, catégories et plugins par drag n drop (contribution bazooka07)
 FIX Suppression fichier plugin update impossible (droit fichier)
 FIX Chevauchement des menus de l'administration avec un facteur de zoom > 100%
 FIX Administration : mauvais affichage des caractères spéciaux dans le nom de l'auteur d'un commentaire (contribution bazooka07)
